<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/measurement_to_convert"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:hint="@string/measurement_to_convert_text"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/convert_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="@string/unit_to_convert_from_text"
        app:layout_constraintTop_toBottomOf="@id/measurement_to_convert"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/from_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_from" >
        
        <RadioButton
            android:id="@+id/from_ounces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ounces_from" />

        <RadioButton
            android:id="@+id/from_grams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grams_from" />

        <RadioButton
            android:id="@+id/from_fluid_ounces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fluid_ounces_from" />

        <RadioButton
            android:id="@+id/from_liters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liters_from" />

        <RadioButton
            android:id="@+id/from_temp_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_from" />

        <RadioButton
            android:id="@+id/from_temp_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centigrade_from" />

    </RadioGroup>

    <Button
        android:id="@+id/convert_button"
        android:text="@string/convert_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/from_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/convert_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversion_text"
        tools:text="1 ounce = 28 grams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_button" />

</androidx.constraintlayout.widget.ConstraintLayout>